# WolfScript

./: CMakeLists.txt  README.md  funparsing.hpp  main.cpp  script.txt  wolfscript.hpp
main/: CMakeLists.txt  main.cpp  script.wolf
wolfscript/: wolfscript.hpp
wolfscript/language/: arithmetic.hpp  ast.hpp  callable.hpp  cast.hpp  common.hpp  exception.hpp  function.hpp  interpreter.hpp  interpretor.hpp  parser.hpp  token.hpp  tokenizer.hpp  type_info.hpp  value_type.hpp
